--- a/app/assets/fonts/stylesheet.css
+++ b/app/assets/fonts/stylesheet.css
@@ -1,4 +1,4 @@
-@import '../../../node_modules/font-awesome/css/font-awesome.css';
+@import '../../node_modules/font-awesome/css/font-awesome.css';
 
 @font-face {
     font-family: 'Open Sans';
